Remove ghct registry from build action.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,6 @@ on:
     tags:
       - 'v*'
 env:
-  REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 jobs:
   build:
@@ -25,20 +24,12 @@ jobs:
         username: ${{ secrets.CR_USERNAME }}
         password: ${{ secrets.CR_PASSWORD }}
 
-    - name: Log in to the Container registry
-      uses: docker/login-action@v2
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
     - name: Extract metadata (tags, labels) for Docker
       id: meta
       uses: docker/metadata-action@v4
       with:
         images: |
-          ${{ secrets.CR_REGISTRY }}/ywserver/auth-api
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          ${{ secrets.CR_REGISTRY }}/ywapi/auth-api
         tags: |
           type=semver,pattern={{raw}}
 
